--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
                 "name": "next"
             }
         ],
+        "baseUrl": "app/",
         "paths": {
-            "@/*": ["./*"]
+            "@/styles/*": ["styles/*"],
+            "@/components/*": ["components/*"],
+            "@/util/*": ["util/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
